# rust-raytracer

./: Cargo.toml
data/: test_scene.json
src/: camera.rs  config.rs  lib.rs  main.rs  materials.rs  point3d.rs  raytracer.rs
src/body/: ellipsoid.rs  mod.rs  sphere.rs
